force-app/main/default/objects/Events__c/fields/Company_Information__c.field-meta.xml
<CustomField>
    <fullName>Company_Information__c</fullName>
    <label>Company Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>