force-app/main/default/objects/Events__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <label>GST(%)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>