force-app/main/default/objects/Events__c/fields/Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition__c</fullName>
    <label>Terms &amp; Condition</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>